# aicodec

./: .aicodec-config.json  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  404.html  CLAUDE.md  README.md  REVIEW.md  index.html  mkdocs.yml  pyproject.toml  run_aicodec.py
.claude/commands/: debug.md  docs.md  implement.md  pr.md  refactor.md  review.md  test.md
.github/workflows/: build-release.yml  ci.yml  docs.yml
aicodec/: __init__.py  cli.py  decoder.py  decoder_schema.json  encoder.py  pyproject.toml  review_server.py
aicodec/application/: services.py
aicodec/assets/: decoder_schema.json  prompt_template.txt
aicodec/assets/prompts/: base.j2  full.j2  output_guide_full.j2  output_guide_minimal.j2
aicodec/core/: config.py
aicodec/domain/: models.py  repositories.py
aicodec/infrastructure/: config.py  map_generator.py  utils.py
aicodec/infrastructure/cli/: command_line_interface.py
aicodec/infrastructure/cli/commands/: aggregate.py  apply.py  init.py  prepare.py  prompt.py  revert.py  uninstall.py  update.py  utils.py
aicodec/infrastructure/repositories/: file_system_repository.py
aicodec/infrastructure/web/: server.py
aicodec/infrastructure/web/ui/: index.html
aicodec/review-ui/: index.html
aicodec/services/: decoder_service.py  encoder_service.py
commands/aggregate/: index.html
commands/apply/: index.html
commands/buildmap/: index.html
commands/init/: index.html
commands/prepare/: index.html
commands/prompt/: index.html
commands/revert/: index.html
commands/schema/: index.html
configuration/: index.html
docs/: configuration.md  getting-started.md  index.md
docs/commands/: aggregate.md  apply.md  buildmap.md  init.md  prepare.md  prompt.md  revert.md  schema.md
docs/getting-started/: installation.md  tutorial.md
docs/guides/: best-practices.md  git-integration.md  plugins.md
getting-started/: index.html
getting-started/installation/: index.html
getting-started/tutorial/: index.html
guides/best-practices/: index.html
guides/git-integration/: index.html
guides/plugins/: index.html
review-ui/: index.html
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
search/: search_index.json
tests/: conftest.py  test_aggregation.py  test_application_services.py  test_cli.py  test_decoder.py  test_decoder_service.py  test_encoder.py  test_encoder_service.py  test_infra_cli.py  test_infra_config_utils.py  test_infra_repositories.py  test_infra_web.py  test_review_server.py
tests/commands/: test_aggregate.py  test_apply.py  test_buildmap.py  test_init.py  test_prepare.py  test_prepare_clipboard_error.py  test_prompt.py  test_revert.py  test_schema.py  test_uninstall.py  test_update.py  test_utils.py
