[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicodec"
version = "0.6.0"
description = "A set of tools to encode and decode file structures into JSON for communicating with an llm."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["jsonschema"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-cov", "pytest-html", "requests"]

# This section makes your scripts available as command-line tools
[project.scripts]
aicodec-aggregate = "aicodec.cli:aggregate_main"
aicodec-apply = "aicodec.cli:review_and_apply_main"

[tool.setuptools]
packages = ["aicodec"]
