[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicodec_test"
version = "1.0.0"
description = "A lightweight communication layer for developers to interact with LLMs."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Steffen Krakau" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["jsonschema", "pyperclip", "pathspec"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-cov", "pytest-html", "requests"]

[project.scripts]
aicodec_test = "aicodec.infrastructure.cli.command_line_interface:main"

[tool.setuptools.packages.find]
where = ["aicodec"]

[tool.setuptools.package-data]
aicodec_test = ["decoder_schema.json", "infrastructure/web/ui/*"]
