[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicodec"
version = "1.0.0"
description = "A lightweight communication layer for developers to interact with LLMs."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Steffen Krakau" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["jsonschema", "pyperclip", "pathspec"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-cov", "pytest-html", "requests"]

[project.scripts]
aicodec = "aicodec.infrastructure.cli.command_line_interface:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aicodec*"]

[tool.setuptools.package-data]
aicodec = ["decoder_schema.json", "infrastructure/web/ui/*"]
